--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "ajv-keywords": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.1.4",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
